Fixed modal feedback form button stretching in IE

--- a/css/style.css
+++ b/css/style.css
@@ -1847,6 +1847,10 @@ a:focus .underscore_text {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
 }
 
 .modal-feedback b {
